--- a/cityreport-web/pom.xml
+++ b/cityreport-web/pom.xml
@@ -112,6 +112,13 @@
 			<scope>test</scope>
 		</dependency>
 
+    <!--Joda Date/Time-->
+    <dependency>
+        <groupId>joda-time</groupId>
+        <artifactId>joda-time</artifactId>
+        <version>2.3</version>
+    </dependency>
+
 		<!--Spring Mongo -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -122,6 +129,33 @@
 	</dependencies>
 	<build>
 		<plugins>
+      <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>jaxb2-maven-plugin</artifactId>
+          <version>1.6</version>
+          <executions>
+              <execution>
+                  <id>Open311</id>
+                  <configuration>
+                      <schemaDirectory>xsd</schemaDirectory>
+                      <bindingDirectory>xsd</bindingDirectory>
+                      <outputDirectory>src/main/generated-sources</outputDirectory>
+                      <clearOutputDir>false</clearOutputDir>
+                      <arguments>-Xvalue-constructor</arguments>
+                  </configuration>
+                  <goals>
+                      <goal>xjc</goal>
+                  </goals>
+              </execution>
+          </executions>
+          <dependencies>
+              <dependency>
+                  <groupId>org.jvnet.jaxb2_commons</groupId>
+                  <artifactId>jaxb2-value-constructor</artifactId>
+                  <version>3.0</version>
+              </dependency>
+          </dependencies>
+      </plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
