--- a/cityreport-web/pom.xml
+++ b/cityreport-web/pom.xml
@@ -14,6 +14,12 @@
 	</properties>
 
 	<dependencies>
+	  <dependency>
+	    <groupId>eu.trentorise.smartcampus</groupId>
+	    <artifactId>profileservice.client</artifactId>
+	    <version>2.1</version>
+	  </dependency>
+	
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
