--- a/cityreport-web/pom.xml
+++ b/cityreport-web/pom.xml
@@ -19,6 +19,11 @@
 	    <artifactId>profileservice.client</artifactId>
 	    <version>2.1</version>
 	  </dependency>
+    <dependency>
+      <groupId>eu.trentorise.smartcampus</groupId>
+      <artifactId>aac.client</artifactId>
+      <version>1.2</version>
+    </dependency>
 	
 		<dependency>
 			<groupId>org.slf4j</groupId>
