--- a/roveretosegnala/package.json
+++ b/roveretosegnala/package.json
@@ -13,5 +13,16 @@
     "bower": "^1.3.3",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0"
-  }
+  },
+  "cordovaPlugins": [
+    "org.apache.cordova.inappbrowser",
+    "org.apache.cordova.file",
+    "org.apache.cordova.device",
+    "org.apache.cordova.console",
+    "com.ionic.keyboard",
+    "org.apache.cordova.statusbar",
+    "org.apache.cordova.splashscreen",
+    "org.apache.cordova.camera",
+    "org.apache.cordova.geolocation"
+  ]
 }
