--- a/cityreport-web/pom.xml
+++ b/cityreport-web/pom.xml
@@ -153,6 +153,8 @@
                       <outputDirectory>src/main/generated-sources</outputDirectory>
                       <clearOutputDir>false</clearOutputDir>
                       <arguments>-Xvalue-constructor</arguments>
+                      <locale>en</locale>
+                      <encoding>${file.encoding}</encoding>
                   </configuration>
                   <goals>
                       <goal>xjc</goal>
